--- a/demo/style.css
+++ b/demo/style.css
@@ -220,3 +220,39 @@
 /* --------------------------------- */
 
 
+.box.six
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.box.six .cadastros
+{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex-grow: 1;
+
+    height: 94px;
+    padding-top: 26px;
+    font-size: 12px;
+    text-align: center;
+
+}
+.box.six .cadastros p:nth-child(2)
+{
+    width: 241px;
+}
+.box.six .cadastros p:nth-child(1)
+{
+    font-weight: bold;
+}
+.box.six .cadastros span
+{
+    font-weight: bold;
+}
+.box.six .cadastros a
+{
+    text-decoration: none;
+    font-weight: bold;
+}
