--- a/demo/style.css
+++ b/demo/style.css
@@ -29,9 +29,28 @@
 }
 
 
+.acessibilidade
+{
+    position: absolute;
+    bottom: 30px;
+    right: 10px;
 
+    background: var(--blue-one);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 0px 42px 64px -21px rgba(0,0,0,0.75);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color: var(--white);
+    font-size: 1.5em;
+}
 .tela
 {
+    position: relative;
     margin: auto;
     width: 985px;
    
@@ -255,4 +274,51 @@
 {
     text-decoration: none;
     font-weight: bold;
+}
+
+
+/* --------------------------------- */
+
+.box.seven
+{
+    margin-top: 36px;
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    align-items: center;
+    font-weight: bold;
+
+}
+.box.seven .sb
+{
+    width: 677px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.box.seven .sb a
+{
+    color: var(--blue-tre);
+    text-decoration: none;
+}
+
+/* --------------------------------- */
+
+.box.eit
+{
+    margin-top: 14px;
+    background: var(--blue-two);
+    border-top: 3px solid var(--yellow);
+    font-size: 11px;
+    display: flex;
+    justify-content: center;
+    padding-block: 4px;
+    
+}
+.box.eit
+{
+    color: var(--white);
+    
 }
