--- a/demo/style.css
+++ b/demo/style.css
@@ -47,12 +47,14 @@
 
     color: var(--white);
     font-size: 1.5em;
+    cursor: pointer;
 }
+
 .tela
 {
     position: relative;
     margin: auto;
-    width: 985px;
+    max-width: 985px;
    
 }
 .box
