--- a/demo/paginainicial.css
+++ b/demo/paginainicial.css
@@ -28,6 +28,8 @@
 
     --yellow:#D99C44;
     --yellow-two:#FFFFE4;
+
+    --sig: Verdana, sans-serif;
 }
 
 .acessibilidade
@@ -42,7 +44,7 @@
     border-radius: 50%;
     box-shadow: 0px 42px 64px -21px rgba(0,0,0,0.75);
 
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
 
@@ -59,27 +61,73 @@
    
 }
 
-.box.one .titulo
+.box.one .barradetitulo
 {
     display: flex;
     align-items: baseline;
-    gap: 14px;
+    justify-content: space-between;
     color: var(--white);
     
     background: var(--blue-two);
     border-bottom: solid 3px var(--yellow);
     padding-left: 4px;
 }
-.box.one .titulo h3
+.box.one .barradetitulo #titulo
+{
+    display: flex;
+    align-items: baseline;
+    gap: 10px;
+}
+.box.one .barradetitulo h3
 {
     font-size: 15px
 }
-.box.one .titulo P
+.box.one .barradetitulo P
 {
-    font-size: 13px
+    font-size: 13px;
+    font-family: var(--sig);
 }
-
-.resto
+#utilarios
+{
+    display: flex;
+    align-items: baseline;
+}
+#tamnhhodafonte
+{
+    padding: 0 5px;
+    border-right: 1px solid var(--yellow);
+}
+#tamnhhodafonte button
+{
+    background: transparent;
+    border: none;
+    color: white;
+    font-weight: 600;
+}
+#tempodesessao
+{
+    padding: 0 5px;  
+}
+#tempodesessao p
+{
+    font-size: x-small;
+    font-style: italic;
+}
+#tempodesessao p span
+{
+    font-style: normal;
+}
+#sair
+{
+    font-size: small;
+    font-weight: bold;
+    background: transparent;
+    border: none;
+    color: #FEF9DC;
+    padding-right: 10px;
+    font-family: var(--sig);
+}
+.painelDoUsuario
 {
     height: 48px;
     background: var(--blue-five);
